--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 
@@ -20,8 +22,8 @@
         <div class="container">
             <header>
                 <div class="row justify-content-between">
-                    <div class="logo col-xl-1"><img src="assets/svg/logo.svg" alt=""></div>
-                    <ul class="menu d-flex justify-content-between col-xl-5">
+                    <div class="logo col-1 d-none d-md-block"><img src="assets/svg/logo.svg" alt="" class="img-fluid"></div>
+                    <ul class="menu d-flex justify-content-between col-xl-5 col-lg-7 col-md-8">
                         <li class="menu_item"><a href="#" class="item_link">Главная</a></li>
                         <li class="menu_item"><a href="#" class="item_link">Услуги</a></li>
                         <li class="menu_item"><a href="#" class="item_link">Об агентстве</a></li>
@@ -35,13 +37,12 @@
                     <div class="intro_subtitle">Комфортные условия - наша забота!</div>
                     <div class="intro_button">
                         <a class="main_btn" href="#">Подробнее
-                            <!-- <img src="assets/svg/carbon_arrow-right.svg" alt="" class="btn_img_arrow"> -->
                         </a>
                     </div>
                 </div>
 
-                <div class="col-xl-5 d-flex justify-content-between align-items-end ">
-                    <div class="banner_front_photo"></div>
+                <div class="col-xl-5 d-flex  justify-content-md-end justify-content-lg-between align-items-end ">
+                    <div class="banner_front_photo d-none d-lg-block"></div>
                     <div class="scroll_arrow_img">scroll <img src="assets/svg/Arrow 1.svg" alt=""></div>
                 </div>
             </div>
@@ -64,22 +65,22 @@
         <div class="container">
             <div class="section_title">Почему стоит выбрать нас ?</div>
             <div class="row">
-                <div class="advantages_item col-xl-3">
+                <div class="advantages_item col-xl-3 col-md-6">
                     <div class="advantages_item__icon"><img src="assets/svg/miror.svg" alt=""></div>
                     <div class="advantages_item__title">Лучшие стилисты и визажисты</div>
                     <div class="advantages_item__description">Наши визажисти и стилисты усилят Вашу красоту и сделают из Вас настоящую королеву! </div>
                 </div>
-                <div class="advantages_item col-xl-3">
+                <div class="advantages_item col-xl-3 col-md-6">
                     <div class="advantages_item__icon"><img src="assets/svg/carbon_skill-level.svg" alt=""></div>
                     <div class="advantages_item__title">Высокий уровень сервиса</div>
                     <div class="advantages_item__description">Мы сделаем ВСЁ, чтобы Вы остались довольными! И предоставим наилучшие условия! </div>
                 </div>
-                <div class="advantages_item col-xl-3">
+                <div class="advantages_item col-xl-3 col-md-6">
                     <div class="advantages_item__icon"><img src="assets/svg/carbon_security.svg" alt=""></div>
                     <div class="advantages_item__title">Гарантия конфиденциальности</div>
                     <div class="advantages_item__description">Для всех наших девушек агентства! Полная безопастность и анонимность! Гарантируем! </div>
                 </div>
-                <div class="advantages_item col-xl-3">
+                <div class="advantages_item col-xl-3 col-md-6">
                     <div class="advantages_item__icon"><img src="assets/svg/cil_people.svg" alt=""></div>
                     <div class="advantages_item__title">Большая база порядочных клиентов</div>
                     <div class="advantages_item__description">Всегда обеспечим Вас работой! В наличии большая база щедрых клиентов! </div>
@@ -94,8 +95,8 @@
         <div class="container">
             <div class="row d-flex justify-content-between">
                 <div class="section_title col-xl-3">Наши контакты</div>
-                <div class="col-xl-5 d-flex contacts_block">
-                    <div> <img src="assets/svg/carbon_phone.svg" alt="" class="">
+                <div class="col-xl-5 d-flex flex-column align-items-center flex-lg-row align-items-lg-start contacts_block">
+                    <div> <img src="assets/svg/carbon_phone.svg" alt="" class="contacts_icon">
                     </div>
                     <ul class="phone_list d-flex flex-column flex-wrap">
                         <li><a href="tel:+" class="phone_item contacts_text">+38(067)515-76-26</a></li>
@@ -104,8 +105,8 @@
                         <li><a href="tel:+" class="phone_item contacts_text">+38(067)405-73-03</a></li>
                     </ul>
                 </div>
-                <div class="col-xl-3 contacts_block">
-                    <img src="assets/svg/carbon_email.svg" alt="">
+                <div class="col-xl-3 d-flex d-lg-block flex-column align-items-center contacts_block">
+                    <img src="assets/svg/carbon_email.svg" alt="" class="contacts_icon">
                     <a href="mailto:" class="contacts_text">princess-girls@ukr.net</a>
                 </div>
             </div>
@@ -115,10 +116,10 @@
     <!-- ========================================================== / section_contacts ============ -->
     <!-- ---------------------------------------------------------- section_promo ----------------- -->
     <section id="promo" class="section_promo">
-        <div class="container">
+        <div class="container-lg">
             <div class="row">
                 <div class="col-xl-6 promo_photo_wrap center">
-                    <img src="assets/promo.jpg" alt="">
+                    <img src="assets/promo.jpg" alt="" class="">
                 </div>
                 <div class="col-xl-6 promo_text_wrap d-flex flex-column justify-content-center">
                     <div class="section_title">Условия работы</div>
@@ -141,12 +142,12 @@
     <!-- ========================================================== / section_promo =============== -->
     <!-- ---------------------------------------------------------- section_requirements ---------- -->
     <section id="requirements" class="section_requirements">
-        <div class="container d-flex flex-column justify-content-between h-100">
-            <div class="row">
+        <div class="container d-flex flex-column justify-content-end justify-xl-content-between min-vh-100">
+            <div class="row justify-content-center">
                 <div class="col-xl-1"></div>
-                <div class="section_title col-xl-8">Требования девушкам, имеющим желание работать в эскорт</div>
+                <div class="section_title col-8">Требования девушкам, имеющим желание работать в эскорт</div>
             </div>
-            <div class="row">
+            <div class="row d-none d-xl-flex h-100">
                 <div class="col-xl-3 requirements_item item1">
                     <div class="requirements_item__description">
                         Лучшее твое качество - это твоя привлекательность.
@@ -168,11 +169,58 @@
                     </div>
                 </div>
             </div>
+            <div id="carouselExampleControls" class="carousel slide d-xl-none" data-ride="carousel">
+                <div class="row justify-content-center">
+                    <div class="col-md-9">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active" data-interval="10000">
+                                <div class="col-xl-3 requirements_item item1">
+                                    <div class="requirements_item__description">
+                                        Лучшее твое качество - это твоя привлекательность.
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item" data-interval="10000">
+                                <div class="col-xl-3 requirements_item item2">
+                                    <div class="requirements_item__description">
+                                        Тебе достаточно быть просто милой и обаятельной девушкой, обладающей большой жизненной энергией и хорошим, позитивным настроением.
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item" data-interval="10000">
+                                <div class="col-xl-3 requirements_item item3">
+                                    <div class="requirements_item__description">
+                                        Твой возраст должен быть oт 21 года до 35 лет.
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item" data-interval="10000">
+                                <div class="col-xl-3 requirements_item item4">
+                                    <div class="requirements_item__description">
+                                        Знание английского языка не обязательно, однако является огромным преимуществом на пути к успешной и красивой жизни.
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row d-flex justify-content-center">
+                    <div class="col-md-2 d-flex justify-content-between">
+                        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                            <img src="assets/svg/left-arrow-circle.svg" alt="">
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                            <img src="assets/svg/right-arrow-circle.svg" alt="">
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <!-- ========================================================== / section_requirements========= -->
     <!-- ---------------------------------------------------------- section_reviews --------------- -->
     <section id="reviews" class="section_reviews">
+
         <div class="container">
             <div class="row">
                 <div class="section_title col-xl-5">
@@ -182,6 +230,7 @@
             <div class="row">
                 <div class="col-xl-6">
                     <div class="reviews_item d-flex flex-column justify-content-between">
+                        <div class="red_circle1"></div>
                         <div class="reviews_item__description">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum maecenas ut dictum in viverra quis nisi, nulla. Amet vulputate enim et porttitor nullam turpis viverra et massa.
                         </div>
@@ -198,6 +247,8 @@
                 </div>
                 <div class="col-xl-6">
                     <div class="reviews_item d-flex flex-column justify-content-between">
+                        <div class="red_circle2"></div>
+
                         <div class="reviews_item__description">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Velit sit non sed faucibus imperdiet quis. Tristique vel ornare imperdiet laoreet. Vulputate sagittis massa et et eu, vitae eget viverra sed.
                         </div>
@@ -218,11 +269,88 @@
     <!-- ========================================================== / section_reviews ============= -->
     <!-- ---------------------------------------------------------- section_faq ------------------- -->
     <section id="faq" class="section_faq">
+        <div class="container">
+            <div class="section_title">Вопросы и ответы</div>
+            <div class="row">
+                <div class="col-xl-7">
+
+                    <div class="accordion" id="accordionExample">
+                        <div class="card">
+                            <div class="btn" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit ?
+                                <i class="fas fa-arrow-up"></i>
+                            </div>
+
+                            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                                <div class="card-body">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ac quis amet quam interdum nulla vitae. Nisl faucibus sodales ultricies pulvinar.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="btn collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                Lorem ipsum dolor sit amet ?
+                                <i class="fas fa-arrow-up"></i>
+                            </div>
+                            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                                <div class="card-body">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ac quis amet quam interdum nulla vitae. Nisl faucibus sodales ultricies pulvinar.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="btn collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                Lorem ipsum dolor sit amet ?
+                                <i class="fas fa-arrow-up"></i>
+                            </div>
+                            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                                <div class="card-body">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ac quis amet quam interdum nulla vitae. Nisl faucibus sodales ultricies pulvinar.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="btn collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
+                                Lorem ipsum dolor sit amet ?
+                                <i class="fas fa-arrow-up"></i>
+                            </div>
+                            <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
+                                <div class="card-body">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ac quis amet quam interdum nulla vitae. Nisl faucibus sodales ultricies pulvinar.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-xl-5">
+                    <div class="faq_image_wrap d-flex justify-content-center">
+                        <img src="assets/flower.png" alt="" class="align-self-center">
+
+                        <div class="figure_circle figure2"></div>
+                        <div class="figure_circle figure1"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </section>
     <!-- ========================================================== / section_faq ================= -->
     <!-- ---------------------------------------------------------- section_footer ---------------- -->
     <section id="footer" class="section_footer">
+        <div class="container">
+            <div class="section_title text-uppercase">sweet girls</div>
+            <div class="row d-flex justify-content-center">
+                <div class="col-xl-6">
+                    <ul class="menu d-flex justify-content-around">
+                        <li class="menu_item"><a href="#" class="item_link">Главная</a></li>
+                        <li class="menu_item"><a href="#" class="item_link">Услуги</a></li>
+                        <li class="menu_item"><a href="#" class="item_link">Об агентстве</a></li>
+                        <li class="menu_item"><a href="#" class="item_link">Контакты</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
 
     </section>
     <!-- ========================================================== / section_footer ============== -->
