made adapteve screen size for ipad

--- a/index.html
+++ b/index.html
@@ -142,60 +142,61 @@
     <!-- ========================================================== / section_promo =============== -->
     <!-- ---------------------------------------------------------- section_requirements ---------- -->
     <section id="requirements" class="section_requirements">
-        <div class="container d-flex flex-column justify-content-end justify-xl-content-between min-vh-100">
-            <div class="row justify-content-center">
+        <div class="container d-flex flex-column justify-content-end justify-content-lg-between min-vh-100">
+            <div class="row justify-content-center justify-content-lg-start">
                 <div class="col-xl-1"></div>
-                <div class="section_title col-8">Требования девушкам, имеющим желание работать в эскорт</div>
+                <div class="section_title col-7">Требования девушкам, имеющим желание работать в эскорт</div>
+
             </div>
-            <div class="row d-none d-xl-flex h-100">
-                <div class="col-xl-3 requirements_item item1">
+            <div class="row d-none d-lg-flex h-100">
+                <div class="col-3 requirements_item item1">
                     <div class="requirements_item__description">
                         Лучшее твое качество - это твоя привлекательность.
                     </div>
                 </div>
-                <div class="col-xl-3 requirements_item item2">
+                <div class="col-3 requirements_item item2">
                     <div class="requirements_item__description">
                         Тебе достаточно быть просто милой и обаятельной девушкой, обладающей большой жизненной энергией и хорошим, позитивным настроением.
                     </div>
                 </div>
-                <div class="col-xl-3 requirements_item item3">
+                <div class="col-3 requirements_item item3">
                     <div class="requirements_item__description">
                         Твой возраст должен быть oт 21 года до 35 лет.
                     </div>
                 </div>
-                <div class="col-xl-3 requirements_item item4">
+                <div class="col-3 requirements_item item4">
                     <div class="requirements_item__description">
                         Знание английского языка не обязательно, однако является огромным преимуществом на пути к успешной и красивой жизни.
                     </div>
                 </div>
             </div>
-            <div id="carouselExampleControls" class="carousel slide d-xl-none" data-ride="carousel">
+            <div id="carouselExampleControls" class="carousel slide d-lg-none" data-ride="carousel">
                 <div class="row justify-content-center">
                     <div class="col-md-9">
                         <div class="carousel-inner">
                             <div class="carousel-item active" data-interval="10000">
-                                <div class="col-xl-3 requirements_item item1">
+                                <div class="col-3 requirements_item item1">
                                     <div class="requirements_item__description">
                                         Лучшее твое качество - это твоя привлекательность.
                                     </div>
                                 </div>
                             </div>
                             <div class="carousel-item" data-interval="10000">
-                                <div class="col-xl-3 requirements_item item2">
+                                <div class="col-3 requirements_item item2">
                                     <div class="requirements_item__description">
                                         Тебе достаточно быть просто милой и обаятельной девушкой, обладающей большой жизненной энергией и хорошим, позитивным настроением.
                                     </div>
                                 </div>
                             </div>
                             <div class="carousel-item" data-interval="10000">
-                                <div class="col-xl-3 requirements_item item3">
+                                <div class="col-3 requirements_item item3">
                                     <div class="requirements_item__description">
                                         Твой возраст должен быть oт 21 года до 35 лет.
                                     </div>
                                 </div>
                             </div>
                             <div class="carousel-item" data-interval="10000">
-                                <div class="col-xl-3 requirements_item item4">
+                                <div class="col-3 requirements_item item4">
                                     <div class="requirements_item__description">
                                         Знание английского языка не обязательно, однако является огромным преимуществом на пути к успешной и красивой жизни.
                                     </div>
