added anketa section

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <div class="intro_content">
             <div class="container">
                 <div class="row">
-                    <div class="col-xl-7">
-                        <div class="intro_title">Лучшее эскорт-агентство "Sweet-Girls"</div>
+                    <div class="col-xl-6">
+                        <div class="intro_title section_title">Лучшее эскорт-агентство "Sweet-Girls"</div>
                         <div class="intro_subtitle">Комфортные условия - наша забота!</div>
                         <div class="intro_button d-flex justify-content-center d-sm-block">
                             <a class="main_btn" href="#">Подробнее</a>
@@ -282,6 +282,40 @@
         </div>
     </section>
     <!-- ========================================================== / section_reviews ============= -->
+    <!-- ---------------------------------------------------------- section_anketa ---------------- -->
+    <section id="anketa" class="section_anketa">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="section_title col-8 col-lg-5">Будь с нами, оставляй зявку</div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="form_box col-11 col-lg-8 col-xl-7">
+                    <div class="form_box__title col-12">Заполняй анкету</div>
+                    <form action="">
+                        <div class="form_item col-12">
+                            <div class="input_title">Имя</div>
+                            <input class="w-100" type="text">
+                        </div>
+                        <div class="form_item col-12">
+                            <div class="input_title">Номер телефона</div>
+                            <input class="w-100" type="tel">
+                        </div>
+                        <div class="form_item col-12">
+                            <div class="input_title">Email</div>
+                            <input class="w-100" type="email">
+                        </div>
+                        <div class="col-12 d-flex justify-content-center">
+                            <a class="main_btn">Отправить анкету</a>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+
+    </section>
+    <!-- ========================================================== / section_anketa ============== -->
+
     <!-- ---------------------------------------------------------- section_faq ------------------- -->
     <section id="faq" class="section_faq">
         <div class="container">
