--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 
     <link rel="stylesheet" href="css/style.css">
 
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 </head>
 
@@ -36,7 +37,7 @@
                             <div class="logo_title d-sm-none col-5">PRINCESS GIRL</div>
                             <ul id="menu_box" class="menu_box">
                                 <div class="logo_title  d-sm-none">PRINCESS GIRL</div>
-                                <li class="menu_box_item"><a href="/" class="item_link">Главная</a></li>
+                                <li class="menu_box_item"><a href="#intro" class="item_link">Главная</a></li>
                                 <li class="menu_box_item"><a href="#reviews" class="item_link">Отзывы</a></li>
                                 <li class="menu_box_item"><a href="#promo" class="item_link">Об агентстве</a></li>
                                 <li class="menu_box_item"><a href="#contacts" class="item_link">Контакты</a></li>
@@ -50,14 +51,15 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xl-6">
-                        <div class="intro_title section_title">Лучшее эскорт-агентство "Sweet-Girls"</div>
+                        <div class="intro_title section_title" data-aos="fade-down">Лучшее эскорт-агентство "Sweet-Girls"</div>
                         <div class="intro_subtitle">Комфортные условия - наша забота!</div>
                         <div class="intro_button d-flex justify-content-center d-sm-block">
-                            <a class="main_btn" href="#">Подробнее</a>
+                            <a class="main_btn" href="#promo">Подробнее</a>
                         </div>
                     </div>
                     <div class="col-xl-6 d-flex  justify-content-md-end justify-content-xl-between align-items-end ">
-                        <div class="banner_front_photo"></div>
+                        <div class="banner_front_photo" data-aos="flip-right" data-aos-duration="1500">
+                        </div>
                         <div class="scroll_arrow_img d-none d-sm-block">scroll <img src="assets/svg/Arrow 1.svg" alt=""></div>
                     </div>
                 </div>
@@ -69,7 +71,7 @@
     <section id="preview" class="section_preview">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="section_title col-xl-7">Работа для девушек в Киеве</div>
+                <div class="section_title col-xl-7" data-aos="fade-down">Работа для девушек в Киеве</div>
                 <div class="section_description col-xl-10">У нас к Вам интересное предложение — работа для девушек в элитных салонах с высокой оплатой. Если Вы молоды, обаятельны, энергичны, живете далеко от центра Киева и хотите осуществить свои мечты — работа в Киеве для девушек от 18 лет ждет
                     Вас, мы готовы с Вами сотрудничать.</div>
             </div>
@@ -79,24 +81,24 @@
     <!-- ---------------------------------------------------------- section_advantages ------------ -->
     <section id="advantages" class="section_advantages">
         <div class="container">
-            <div class="section_title">Почему стоит выбрать нас ?</div>
+            <div class="section_title" data-aos="fade-down">Почему стоит выбрать нас ?</div>
             <div class="row">
-                <div class="advantages_item col-xl-3 col-md-6">
+                <div class="advantages_item col-xl-3 col-md-6" data-aos="zoom-in-up" data-aos-duration="1500">
                     <div class="advantages_item__icon"><img src="assets/svg/miror.svg" alt=""></div>
                     <div class="advantages_item__title">Лучшие стилисты и визажисты</div>
                     <div class="advantages_item__description">Наши визажисти и стилисты усилят Вашу красоту и сделают из Вас настоящую королеву! </div>
                 </div>
-                <div class="advantages_item col-xl-3 col-md-6">
+                <div class="advantages_item col-xl-3 col-md-6" data-aos="zoom-in-up" data-aos-duration="1000">
                     <div class="advantages_item__icon"><img src="assets/svg/carbon_skill-level.svg" alt=""></div>
                     <div class="advantages_item__title">Высокий уровень сервиса</div>
                     <div class="advantages_item__description">Мы сделаем ВСЁ, чтобы Вы остались довольными! И предоставим наилучшие условия! </div>
                 </div>
-                <div class="advantages_item col-xl-3 col-md-6">
+                <div class="advantages_item col-xl-3 col-md-6" data-aos="zoom-in-up" data-aos-duration="1000">
                     <div class="advantages_item__icon"><img src="assets/svg/carbon_security.svg" alt=""></div>
                     <div class="advantages_item__title">Гарантия конфиденциальности</div>
                     <div class="advantages_item__description">Для всех наших девушек агентства! Полная безопастность и анонимность! Гарантируем! </div>
                 </div>
-                <div class="advantages_item col-xl-3 col-md-6">
+                <div class="advantages_item col-xl-3 col-md-6" data-aos="zoom-in-up" data-aos-duration="1500">
                     <div class="advantages_item__icon"><img src="assets/svg/cil_people.svg" alt=""></div>
                     <div class="advantages_item__title">Большая база порядочных клиентов</div>
                     <div class="advantages_item__description">Всегда обеспечим Вас работой! В наличии большая база щедрых клиентов! </div>
@@ -138,7 +140,7 @@
                     <img src="assets/promo.jpg" alt="" class="">
                 </div>
                 <div class="col-xl-6 promo_text_wrap d-flex flex-column justify-content-center">
-                    <div class="section_title">Условия работы</div>
+                    <div class="section_title" data-aos="fade-down">Условия работы</div>
                     <div class="section_description">Если Вас интересует хорошо оплачиваемая работа для девушек, Киев не обязательно должен быть Вашим родным городом, Вы быстро освоитесь. </div>
                     <div class="promo_text_title">МЫ ПРЕДЛАГАЕМ</div>
                     <ul class="promo_text_list">
@@ -148,7 +150,7 @@
                         <li><span class="list_item_text">Возможность оплатить учебу в ВУЗе</span></li>
                     </ul>
                     <div class="promo_text_button d-flex justify-content-center d-sm-block ">
-                        <a href="#" class="main_btn">Заполнить анкету</a>
+                        <a href="#anketa" class="main_btn">Заполнить анкету</a>
                     </div>
                 </div>
             </div>
@@ -161,27 +163,27 @@
         <div class="container d-flex flex-column justify-content-end justify-content-lg-between min-vh-100">
             <div class="row justify-content-center justify-content-lg-start">
                 <div class="col-xl-1"></div>
-                <div class="section_title col-10 col-md-7">Требования девушкам, имеющим желание работать в эскорт</div>
+                <div class="section_title col-10 col-md-7" data-aos="fade-down">Требования девушкам, имеющим желание работать в эскорт</div>
 
             </div>
             <div class="row d-none d-lg-flex h-100">
                 <div class="col-3 requirements_item item1">
-                    <div class="requirements_item__description">
+                    <div class="requirements_item__description" data-aos="zoom-out" data-aos-duration="500">
                         Лучшее твое качество - это твоя привлекательность.
                     </div>
                 </div>
                 <div class="col-3 requirements_item item2">
-                    <div class="requirements_item__description">
+                    <div class="requirements_item__description" data-aos="zoom-out" data-aos-duration="1000">
                         Тебе достаточно быть просто милой и обаятельной девушкой, обладающей большой жизненной энергией и хорошим, позитивным настроением.
                     </div>
                 </div>
                 <div class="col-3 requirements_item item3">
-                    <div class="requirements_item__description">
+                    <div class="requirements_item__description" data-aos="zoom-out" data-aos-duration="2000">
                         Твой возраст должен быть oт 21 года до 35 лет.
                     </div>
                 </div>
                 <div class="col-3 requirements_item item4">
-                    <div class="requirements_item__description">
+                    <div class="requirements_item__description" data-aos="zoom-out" data-aos-duration="3000">
                         Знание английского языка не обязательно, однако является огромным преимуществом на пути к успешной и красивой жизни.
                     </div>
                 </div>
@@ -240,7 +242,7 @@
 
         <div class="container">
             <div class="row">
-                <div class="section_title col-xl-5">
+                <div class="section_title col-xl-5" data-aos="fade-down">
                     Последние отзывы наших сотрудниц
                 </div>
             </div>
@@ -286,35 +288,40 @@
     <!-- ========================================================== / section_reviews ============= -->
     <!-- ---------------------------------------------------------- section_anketa ---------------- -->
     <section id="anketa" class="section_anketa">
+        <div class="background_darken"></div>
         <div class="container">
-            <div class="row justify-content-center">
-                <div class="section_title col-8 col-lg-5">Будь с нами, оставляй зявку</div>
+            <div class="row d-sm-none justify-content-center">
+                <div class="section_title col-8 " data-aos="fade-down">Будь с нами, <span class="mobile_text_color">оставляй зявку</span></div>
             </div>
             <div class="row justify-content-center">
-                <div class="form_box col-11 col-lg-8 col-xl-7">
-                    <div class="form_box__title col-12">Заполняй анкету</div>
-                    <form method="post" id="ajax_form" action="">
-                        <div class="form_item col-12">
-                            <div class="input_title">Имя</div>
-                            <input class="input w-100" type="text" name="name">
-                        </div>
-                        <div class="form_item col-12">
-                            <div class="input_title">Номер телефона</div>
-                            <input class="input w-100" type="tel" name="phone">
-                        </div>
-                        <div class="form_item col-12">
-                            <div class="input_title">Email</div>
-                            <input class="input w-100" type="email" name="email">
-                        </div>
-                        <div class="col-12 d-flex justify-content-center">
-                            <button class="main_btn" id="btn" type="button" onclick="sendAjaxForm('result_form', 'ajax_form', 'php/action_ajax_form.php')">Отправить анкету</button>
-                        </div>
-                    </form>
-                    <div id="result_form" class="text-center"></div>
+                <div class="form_box col-12 col-sm-11 col-lg-8 col-xl-7 d-flex flex-column justify-content-end" data-aos="fade-down" data-aos-duration="1000">
+                    <div class="box_inner_wrap">
+                        <div class="form_box__title col-12">Заполняй анкету</div>
+                        <form method="post" id="ajax_form" action="">
+                            <div class="form_item col-12">
+                                <div class="input_title">Имя</div>
+                                <input class="input w-100" type="text" name="name" required>
+                            </div>
+                            <div class="form_item col-12">
+                                <div class="input_title">Номер телефона</div>
+                                <input class="input w-100" type="tel" name="phone" required>
+                            </div>
+                            <div class="form_item col-12">
+                                <div class="input_title">Email</div>
+                                <input class="input w-100" type="email" name="email" required>
+                            </div>
+                            <div class="col-12 d-flex justify-content-center">
+                                <button class="main_btn" id="btn" type="submit" onclick="sendAjaxForm('result_form', 'ajax_form', 'php/action_ajax_form.php')">Отправить анкету</button>
+                            </div>
+                        </form>
+                    </div>
+                    <div id="result_form">
+                        <div class='section_title'>СПАСИБО</div>
+                        <div class="result_subtitle">Заявка успешно отправлена!</div>
+                    </div>
                 </div>
             </div>
         </div>
-
 
     </section>
     <!-- ========================================================== / section_anketa ============== -->
@@ -322,18 +329,18 @@
     <!-- ---------------------------------------------------------- section_faq ------------------- -->
     <section id="faq" class="section_faq">
         <div class="container">
-            <div class="section_title">Вопросы и ответы</div>
-            <div class="row">
+            <div class="section_title" data-aos="fade-down">Вопросы и ответы</div>
+            <div class="row align-items-center">
                 <div class="col-xl-7">
 
                     <div class="accordion" id="accordionExample">
                         <div class="card">
-                            <div class="btn d-flex justify-content-between" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            <div class="btn d-flex justify-content-between collapsed" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                                 <div class="card_title"> Lorem ipsum dolor sit amet, consectetur adipiscing elit ?</div>
                                 <i class="fas fa-arrow-up"></i>
                             </div>
 
-                            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                            <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
                                 <div class="card-body">
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ac quis amet quam interdum nulla vitae. Nisl faucibus sodales ultricies pulvinar.
                                 </div>
@@ -396,9 +403,9 @@
                 <div class="col-xl-6">
                     <ul id="menu" class="menu row d-flex justify-content-sm-center">
                         <li class="menu_item col-6 col-sm-auto"><a href="#anketa" class="item_link">Главная</a></li>
-                        <li class="menu_item col-6 col-sm-auto"><a href="#" class="item_link">Услуги</a></li>
-                        <li class="menu_item col-6 col-sm-auto"><a href="#" class="item_link">Об агентстве</a></li>
-                        <li class="menu_item col-6 col-sm-auto"><a href="#" class="item_link">Контакты</a></li>
+                        <li class="menu_item col-6 col-sm-auto"><a href="#reviews" class="item_link">Отзывы</a></li>
+                        <li class="menu_item col-6 col-sm-auto"><a href="#promo" class="item_link">Об агентстве</a></li>
+                        <li class="menu_item col-6 col-sm-auto"><a href="#contacts" class="item_link">Контакты</a></li>
                     </ul>
                 </div>
             </div>
@@ -406,12 +413,18 @@
         <div class="bottom_text text-center ">Lorem ipsum dolor 2020</div>
     </section>
     <!-- ========================================================== / section_footer ============== -->
+    <a id="toTop" href="#intro" class="item_link"><i class="fas fa-angle-up"></i></a>
 
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
     <script src="js/script.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
