added variable to indicate color

--- a/index.html
+++ b/index.html
@@ -290,11 +290,11 @@
     <section id="anketa" class="section_anketa">
         <div class="background_darken"></div>
         <div class="container">
-            <div class="row d-sm-none justify-content-center">
+            <div id="form_title" class="row d-sm-none justify-content-center">
                 <div class="section_title col-8 " data-aos="fade-down">Будь с нами, <span class="mobile_text_color">оставляй зявку</span></div>
             </div>
             <div class="row justify-content-center">
-                <div class="form_box col-12 col-sm-11 col-lg-8 col-xl-7 d-flex flex-column justify-content-end" data-aos="fade-down" data-aos-duration="1000">
+                <div class="form_box col-12 col-sm-11 col-lg-8 col-xl-7 d-flex flex-column justify-content-end">
                     <div class="box_inner_wrap">
                         <div class="form_box__title col-12">Заполняй анкету</div>
                         <form method="post" id="ajax_form" action="">
@@ -318,6 +318,7 @@
                     <div id="result_form">
                         <div class='section_title'>СПАСИБО</div>
                         <div class="result_subtitle">Заявка успешно отправлена!</div>
+                        <div class="result_subtitle">В ближайшее время мы с Вами свяжемся.</div>
                     </div>
                 </div>
             </div>
