--- a/index.html
+++ b/index.html
@@ -134,13 +134,13 @@
     </section>
     <!-- ========================================================== / section_contacts ============ -->
     <!-- ---------------------------------------------------------- section_promo ----------------- -->
-    <section id="promo" class="section_promo">
+    <section class="section_promo">
         <div class="container-xl">
             <div class="row">
                 <div class="col-xl-6 promo_photo_wrap center">
                     <img src="assets/promo.jpg" alt="" class="">
                 </div>
-                <div class="col-xl-6 promo_text_wrap d-flex flex-column justify-content-center">
+                <div id="promo" class="col-xl-6 promo_text_wrap d-flex flex-column justify-content-center">
                     <div class="section_title">Условия работы</div>
                     <div class="section_description">Если Вас интересует хорошо оплачиваемая работа для девушек, Киев не обязательно должен быть Вашим родным городом, Вы быстро освоитесь. </div>
                     <div class="promo_text_title">МЫ ПРЕДЛАГАЕМ</div>
