--- a/index.html
+++ b/index.html
@@ -118,10 +118,12 @@
                     <div> <img src="assets/svg/carbon_phone.svg" alt="" class="contacts_icon">
                     </div>
                     <ul class="phone_list d-flex flex-column flex-wrap">
-                        <li><a href="tel:+380675157626" class="phone_item contacts_text">+38(067)515-76-26</a></li>
-                        <li><a href="tel:+380674457447" class="phone_item contacts_text">+38(067)445-74-47 </a></li>
-                        <li><a href="tel:+380674082177" class="phone_item contacts_text">+38(067)408-21-77</a></li>
-                        <li><a href="tel:+380674057303" class="phone_item contacts_text">+38(067)405-73-03</a></li>
+                        <li><a href="tel:+380935037811" class="phone_item contacts_text">+38(093)503-78-11</a></li>
+                        <li><a href="tel:+380673225793" class="phone_item contacts_text">+38(067)322-57-93 </a></li>
+                        <li><a href="tel:+380999704868" class="phone_item contacts_text">+38(067)129-95-60</a></li>
+                        <li><a href="tel:+380675391344" class="phone_item contacts_text">+38(067)539-13-44</a></li>
+                        <li><a href="tel:+380671299566" class="phone_item contacts_text">+38(067)129-95-66</a></li>
+
                     </ul>
                 </div>
                 <div class="p-0 col-xl-3 d-flex d-xl-block flex-column align-items-center contacts_block">
@@ -138,7 +140,8 @@
         <div class="container-xl">
             <div class="row">
                 <div class="col-xl-6 promo_photo_wrap center">
-                    <img src="assets/promo.jpg" alt="" class="">
+                    <img class="d-none d-sm-inline" src="assets/promo.jpg" alt="img">
+                    <img class="d-sm-none" src="assets/promo_mob.jpg" alt="img">
                 </div>
                 <div id="promo" class="col-xl-6 promo_text_wrap d-flex flex-column justify-content-center">
                     <div class="section_title">Условия работы</div>
