--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <div class="advantages_item col-xl-3 col-md-6" data-aos="zoom-in-up" data-aos-duration="1000">
                     <div class="advantages_item__icon"><img src="assets/svg/carbon_security.svg" alt=""></div>
                     <div class="advantages_item__title">Гарантия конфиденциальности</div>
-                    <div class="advantages_item__description">Для всех наших девушек агентства! Полная безопастность и анонимность! Гарантируем! </div>
+                    <div class="advantages_item__description">Для всех наших девушек агентства! Полная безопасность и анонимность! Гарантируем! </div>
                 </div>
                 <div class="advantages_item col-xl-3 col-md-6" data-aos="zoom-in-up" data-aos-duration="1500">
                     <div class="advantages_item__icon"><img src="assets/svg/cil_people.svg" alt=""></div>
