moved anketa button to top

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <div class="intro_title section_title">Лучшее эскорт-агентство "Sweet-Girls"</div>
                         <div class="intro_subtitle">Комфортные условия - наша забота!</div>
                         <div class="intro_button d-flex justify-content-center d-sm-block">
-                            <a class="main_btn item_link" href="#promo">Подробнее</a>
+                            <a class="main_btn item_link" href="#anketa">Заполнить анкету</a>
                         </div>
                     </div>
                     <div class="col-xl-6 d-flex  justify-content-md-end justify-content-xl-between align-items-end ">
